src/snapshots/transmute__symbol_table__tests__while_statement.snap
---
source: src/symbol_table.rs
expression: "XmlWriter::new(&ast, &table).serialize()"
---
<?xml version="1.0" encoding="utf-8"?>
<unit>
  <scopes>
    <scope id="scope:0">
      <child ref="scope:1" />
    </scope>
    <scope id="scope:1" parent="scope:0">
      <child ref="scope:2" />
    </scope>
    <scope id="scope:2" parent="scope:1">
      <child ref="scope:3" />
    </scope>
    <scope id="scope:3" parent="scope:2">
      <child ref="scope:4" />
      <child ref="scope:6" />
    </scope>
    <scope id="scope:4" parent="scope:3">
      <child ref="scope:5" />
    </scope>
    <scope id="scope:5" parent="scope:4" />
    <scope id="scope:6" parent="scope:3" />
  </scopes>
  <symbols>
    <symbol id="sym:0" scope="scope:0">
      <native>
        <name>sub</name>
        <parameters>
          <parameter>number</parameter>
          <parameter>number</parameter>
        </parameters>
        <return>number</return>
      </native>
    </symbol>
    <symbol id="sym:1" scope="scope:0">
      <native>
        <name>neq</name>
        <parameters>
          <parameter>number</parameter>
          <parameter>number</parameter>
        </parameters>
        <return>boolean</return>
      </native>
    </symbol>
    <symbol id="sym:2" scope="scope:0">
      <native>
        <name>neq</name>
        <parameters>
          <parameter>boolean</parameter>
          <parameter>boolean</parameter>
        </parameters>
        <return>boolean</return>
      </native>
    </symbol>
    <symbol id="sym:3" scope="scope:0">
      <native>
        <name>neg</name>
        <parameters>
          <parameter>number</parameter>
        </parameters>
        <return>number</return>
      </native>
    </symbol>
    <symbol id="sym:4" scope="scope:0">
      <native>
        <name>mul</name>
        <parameters>
          <parameter>number</parameter>
          <parameter>number</parameter>
        </parameters>
        <return>number</return>
      </native>
    </symbol>
    <symbol id="sym:5" scope="scope:0">
      <native>
        <name>lt</name>
        <parameters>
          <parameter>number</parameter>
          <parameter>number</parameter>
        </parameters>
        <return>boolean</return>
      </native>
    </symbol>
    <symbol id="sym:6" scope="scope:0">
      <native>
        <name>le</name>
        <parameters>
          <parameter>number</parameter>
          <parameter>number</parameter>
        </parameters>
        <return>boolean</return>
      </native>
    </symbol>
    <symbol id="sym:7" scope="scope:0">
      <native>
        <name>gt</name>
        <parameters>
          <parameter>number</parameter>
          <parameter>number</parameter>
        </parameters>
        <return>boolean</return>
      </native>
    </symbol>
    <symbol id="sym:8" scope="scope:0">
      <native>
        <name>ge</name>
        <parameters>
          <parameter>number</parameter>
          <parameter>number</parameter>
        </parameters>
        <return>boolean</return>
      </native>
    </symbol>
    <symbol id="sym:9" scope="scope:0">
      <native>
        <name>eq</name>
        <parameters>
          <parameter>number</parameter>
          <parameter>number</parameter>
        </parameters>
        <return>boolean</return>
      </native>
    </symbol>
    <symbol id="sym:10" scope="scope:0">
      <native>
        <name>eq</name>
        <parameters>
          <parameter>boolean</parameter>
          <parameter>boolean</parameter>
        </parameters>
        <return>boolean</return>
      </native>
    </symbol>
    <symbol id="sym:11" scope="scope:0">
      <native>
        <name>div</name>
        <parameters>
          <parameter>number</parameter>
          <parameter>number</parameter>
        </parameters>
        <return>number</return>
      </native>
    </symbol>
    <symbol id="sym:12" scope="scope:0">
      <native>
        <name>add</name>
        <parameters>
          <parameter>number</parameter>
          <parameter>number</parameter>
        </parameters>
        <return>number</return>
      </native>
    </symbol>
    <symbol id="sym:13" scope="scope:1">
      <statement ref="stmt:4" />
    </symbol>
    <symbol id="sym:14" scope="scope:5">
      <statement ref="stmt:0" />
    </symbol>
    <symbol id="sym:15" scope="scope:6">
      <statement ref="stmt:3" />
    </symbol>
  </symbols>
  <ast>
    <identifiers>
      <ident id="ident:0">x</ident>
      <ident id="ident:1">a</ident>
      <ident id="ident:2">b</ident>
      <ident id="ident:3">add</ident>
      <ident id="ident:4">div</ident>
      <ident id="ident:5">eq</ident>
      <ident id="ident:6">ge</ident>
      <ident id="ident:7">gt</ident>
      <ident id="ident:8">le</ident>
      <ident id="ident:9">lt</ident>
      <ident id="ident:10">mul</ident>
      <ident id="ident:11">neg</ident>
      <ident id="ident:12">neq</ident>
      <ident id="ident:13">sub</ident>
    </identifiers>
    <stmt id="stmt:4" line="1" column="1" start="0" len="55" scope="scope:1">
      <fn>
        <identifier ref="ident:0" line="1" column="5" start="4" len="1">x</identifier>
        <parameters />
        <body line="1" column="11" start="10" len="45">
          <expr id="expr:6" line="1" column="11" start="10" len="45" scope="scope:2">
            <block>
              <stmt id="stmt:2" line="1" column="13" start="12" len="29" scope="scope:3">
                <expr id="expr:4" line="1" column="13" start="12" len="29" scope="scope:3">
                  <while>
                    <condition line="1" column="19" start="18" len="4">
                      <expr id="expr:0" line="1" column="19" start="18" len="4" scope="scope:3">
                        <bool>true</bool>
                      </expr>
                    </condition>
                    <body>
                      <expr id="expr:3" line="1" column="24" start="23" len="18" scope="scope:3">
                        <block>
                          <stmt id="stmt:0" line="1" column="26" start="25" len="11" scope="scope:4">
                            <let>
                              <identifier ref="ident:1" line="1" column="30" start="29" len="1">a</identifier>
                              <expression line="1" column="34" start="33" len="2">
                                <expr id="expr:1" line="1" column="34" start="33" len="2" scope="scope:4">
                                  <number>42</number>
                                </expr>
                              </expression>
                            </let>
                          </stmt>
                          <stmt id="stmt:1" line="1" column="38" start="37" len="2" scope="scope:5">
                            <expr id="expr:2" line="1" column="38" start="37" len="1" scope="scope:5">
                              <identifier-ref id="ident-ref:0" ident-ref="ident:1" target-id="">a</identifier-ref>
                            </expr>
                          </stmt>
                        </block>
                      </expr>
                    </body>
                  </while>
                </expr>
              </stmt>
              <stmt id="stmt:3" line="1" column="43" start="42" len="11" scope="scope:3">
                <let>
                  <identifier ref="ident:2" line="1" column="47" start="46" len="1">b</identifier>
                  <expression line="1" column="51" start="50" len="2">
                    <expr id="expr:5" line="1" column="51" start="50" len="2" scope="scope:3">
                      <number>42</number>
                    </expr>
                  </expression>
                </let>
              </stmt>
            </block>
          </expr>
        </body>
      </fn>
    </stmt>
  </ast>
</unit>
